<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MonopolyDigiBanker</string>

    <string name="main_game_add_dialog_title">New Game</string>
    <string name="main_game_add_dialog_pos_button">Done</string>
    <string name="main_game_add_dialog_neg_button">Exit</string>
    <string name="main_game_add_dialog_title_hint">Game Name</string>
    <string name="main_game_add_dialog_player_button">Player %1$d</string>


    <string name="game_list_options_dialog_title">Options</string>
    <string-array name="main_game_item_options">
        <item>Edit</item>
        <item>Delete</item>
        <item>Share</item>
        <item>Reset Game</item>
        <item>Export Game</item>
    </string-array>


    <string name="main_game_remove_dialog_title">%1$s delete</string>
    <string name="main_game_remove_dialog_message">Do you really want to delete \" %1$s \" ?</string>
    <string name="main_game_remove_dialog_pos_button">Yes</string>
    <string name="main_game_remove_dialog_neg_button">No</string>
    <string name="game_list_preview_playercount">%1$d Players</string>


    <string name="main_game_add_dialog_error">Issue(s) in inputs! Game Name/Player is not entered!</string>
    <string name="game_rent_transfer_dialog_title">Pay Rent To...</string>
    <string name="game_rent_amount_dialog_title">Rent Amount</string>
    <string name="all_pay_amount_factor1">Thousand</string>
    <string name="all_pay_amount_factor2">Million</string>
    <string name="game_rent_amount_dialog_pos_button">Pay</string>
    <string name="game_transfer_money_dialog_amount_title">Money Transfer \(to %1$d Players\)</string>
    <string name="game_transfer_money_dialog_title">Money Transfer</string>
    <string name="game_transfer_money_dialog_pos_button">Select</string>
    <string name="game_transfer_money_dialog_neg_button">Exit</string>
    <string name="main_info_game_list_empty">No games available!</string>
    <string name="main_action_game_list_empty">New</string>
    <string name="menu_item_settings_title">Settings</string>
    <string name="activity_settings_name">Settings</string>
    <string name="preference_go_money_title">Go! Money</string>
    <string name="preference_go_money_summary">Defines the amount of money a player gets when crossing Go!</string>
    <string name="preference_go_flag_title">Double Go! Money</string>
    <string name="preference_go_flag_summary">A player gets the double amount of money when directly hitting Go! Notice: Hold the Go! Button long to archieve this!</string>
    <string name="preference_currency_title">Currency</string>
    <string name="preference_currency_summary">Sets the default currency to display the balances in</string>
    <string name="preference_default_balance_summary">The balance of a player to start with</string>
    <string name="preference_default_balance_title">Default Start Balance</string>
    <string name="info_player_balance_zero">No balance left to pay anything!</string>
    <string name="action_player_balance_zero">Manage</string>
    <string name="game_go_money_accept_dialog_message">Do you want to add %1$s to %2$s balance?</string>
    <string name="game_go_money_accept_dialog_pos_button">Yes</string>
    <string name="game_go_money_accept_dialog_neg_button">No</string>
    <string name="game_go_money_accept_dialog_title">Go! Money</string>
    <string name="menu_item_remove_player_title">Remove Player</string>
    <string name="main_game_edit_dialog_title">Editor (%1$s)</string>
    <string name="main_game_edit_pos_button">Save</string>
    <string name="main_game_edit_neg_button">Exit</string>
    <string name="main_game_edit_dialog_remove_title">Remove Player</string>
    <string name="main_game_edit_dialog_remove_message">Do you want to remove %1$s from %2$s ?</string>
    <string name="main_game_edit_dialog_remove_pos_button">Yes</string>
    <string name="main_game_edit_dialog_remove_neg_button">No</string>
    <string name="game_manage_add_money_dialog_title">Money Management (+)</string>
    <string name="game_manage_subtract_money_dialog_title">Money Management (-)</string>
    <string name="game_manage_add_money_pos_button">+</string>
    <string name="game_manage_subtract_money_pos_button">-</string>
    <string name="main_game_reset_dialog_title">Reset Game</string>
    <string name="main_game_reset_dialog_message">Do you want to reset %1$s ? All players will start with the default balance of %2$s .</string>
    <string name="main_game_reset_dialog_pos_button">Yes</string>
    <string name="main_game_reset_dialog_neg_button">No</string>
    <string name="preference_category_balance_title">Balance Settings</string>
    <string name="preference_category_balance_summary">Settings for default balance and GO! money values</string>
    <string name="preference_category_game_title">Game Settings</string>
    <string name="preference_log_flag_title">Activate Logging</string>
    <string name="preference_log_flag_summary">Activates the logging of every taken game event</string>
    <string name="game_log_go_money_event">%1$s got a GO! money of %2$s.</string>
    <string name="game_log_double_go_money_event">%1$s got a double GO! money of %2$s</string>
    <string name="game_log_pay_rent_event">%1$s paid a rent of %2$s to %3$s</string>
    <string name="game_log_transfer_event">%1$s transferred a sum of %2$s to %3$s</string>
    <string name="game_log_manage_add_money_event">%1$s added %2$s to its account balance</string>
    <string name="game_log_manage_subtract_money_event">%1$s subtracted %2$s of its account</string>
    <string name="game_log_new_balance">%1$s has a new balance of %2$s</string>
    <string name="game_log_disabled">Logging deactivated</string>
    <string name="game_no_log_available">No logs available</string>
    <string name="preference_game_schema_selection_title">Game Schema Selection</string>
    <string name="preference_game_schema_selection_summary">Selects a game schema from one of the different real board game versions</string>
    <string name="preference_game_schema_selection_no_select">Not selected</string>
    <string name="menu_item_buy_title">Buy</string>

</resources>